Shenandoah: Resolve cset address truncation and register clash in interpreter LRB

XMLWordPrintable

    • gc
    • b23

      I think this started to happen after JDK-8255762. These tests fail on Windows:

      gc/CriticalNativeArgs.java#id1
      gc/TestHumongousReferenceObject.java#id2
      gc/TestSystemGC.java#id3
      gc/arguments/TestAlignmentToUseLargePages.java#id3
      gc/arguments/TestUseCompressedOopsErgo.java#id3
      gc/class_unloading/TestClassUnloadingDisabled.java#id3
      gc/ergonomics/TestDynamicNumberOfGCThreads.java
      gc/ergonomics/TestInitialGCThreadLogging.java
      gc/logging/TestGCId.java
      gc/metaspace/TestMetaspacePerfCounters.java#id3
      gc/shenandoah/TestSmallHeap.java
      gc/shenandoah/compiler/BarrierInInfiniteLoop.java
      gc/shenandoah/compiler/CallMultipleCatchProjs.java
      gc/shenandoah/compiler/FoldIfAfterExpansion.java
      gc/shenandoah/compiler/LRBRightAfterMemBar.java
      gc/shenandoah/compiler/TestBarrierExpandCallProjection.java
      gc/shenandoah/compiler/TestBarrierExpansionDeadMemPhi.java
      gc/shenandoah/compiler/TestC1ArrayCopyNPE.java
      gc/shenandoah/compiler/TestC1VectorizedMismatch.java
      gc/shenandoah/compiler/TestClone.java#id0
      gc/shenandoah/compiler/TestClone.java#id1
      gc/shenandoah/compiler/TestClone.java#id2
      gc/shenandoah/compiler/TestClone.java#id3
      gc/shenandoah/compiler/TestClone.java#id4
      gc/shenandoah/compiler/TestClone.java#id5
      gc/shenandoah/compiler/TestExpandedWBLostNullCheckDep.java
      gc/shenandoah/compiler/TestLoadPinnedAfterCall.java
      gc/shenandoah/compiler/TestMaybeNullUnsafeAccess.java
      gc/shenandoah/compiler/TestNullCheck.java
      gc/shenandoah/compiler/TestReferenceCAS.java#id0
      gc/shenandoah/compiler/TestReferenceCAS.java#id1
      gc/shenandoah/compiler/TestShenandoahCmpPAfterCall.java
      gc/shenandoah/compiler/TestShenandoahLRBInOuterStripMinedLoop.java
      gc/shenandoah/compiler/TestUnsafeOffheapSwap.java
      gc/shenandoah/compiler/TestWriteBarrierClearControl.java
      gc/shenandoah/mxbeans/TestChurnNotifications.java#id1
      gc/shenandoah/mxbeans/TestChurnNotifications.java#id2
      gc/shenandoah/mxbeans/TestChurnNotifications.java#id3
      gc/shenandoah/mxbeans/TestChurnNotifications.java#id4
      gc/shenandoah/mxbeans/TestChurnNotifications.java#id5
      gc/shenandoah/mxbeans/TestMemoryMXBeans.java
      gc/shenandoah/mxbeans/TestMemoryPools.java
      gc/shenandoah/mxbeans/TestPauseNotifications.java#id1
      gc/shenandoah/mxbeans/TestPauseNotifications.java#id2
      gc/shenandoah/mxbeans/TestPauseNotifications.java#id3
      gc/shenandoah/mxbeans/TestPauseNotifications.java#id4
      gc/shenandoah/mxbeans/TestPauseNotifications.java#id5
      gc/shenandoah/oom/TestAllocLargeObj.java
      gc/shenandoah/oom/TestAllocLargerThanHeap.java
      gc/shenandoah/oom/TestAllocSmallObj.java
      gc/shenandoah/oom/TestClassLoaderLeak.java
      gc/shenandoah/oom/TestThreadFailure.java
      gc/shenandoah/options/TestAlwaysPreTouch.java
      gc/shenandoah/options/TestArgumentRanges.java
      gc/shenandoah/options/TestClassUnloadingArguments.java
      gc/shenandoah/options/TestEnabled.java#id0
      gc/shenandoah/options/TestExplicitGC.java
      gc/shenandoah/options/TestHeuristicsUnlock.java
      gc/shenandoah/options/TestHumongousThresholdArgs.java
      gc/shenandoah/options/TestLoopMiningArguments.java
      gc/shenandoah/options/TestModeUnlock.java
      gc/shenandoah/options/TestObjectAlignment.java#id0
      gc/shenandoah/options/TestObjectAlignment.java#id1
      gc/shenandoah/options/TestPacing.java
      gc/shenandoah/options/TestParallelRegionStride.java
      gc/shenandoah/options/TestRegionSizeArgs.java
      gc/shenandoah/options/TestSingleThreaded.java
      gc/shenandoah/options/TestSoftMaxHeapSize.java
      gc/shenandoah/options/TestThreadCounts.java
      gc/shenandoah/options/TestThreadCountsOverride.java
      gc/startup_warnings/TestShenandoah.java
      gc/stress/CriticalNativeStress.java#id1

      Most of them fail with:

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (d:/a/jdk/jdk/jdk/src/hotspot/cpu/x86/macroAssembler_x86.cpp:1644), pid=2812, tid=352
      # assert(arg_0 != c_rarg1) failed: smashed arg

      --------------- S U M M A R Y ------------

      Command Line: -Xmx128m -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC -XX:ConcGCThreads=1 -XX:ParallelGCThreads=1

      Host: DESKTOP-R9FG84F, AMD Ryzen Threadripper 3970X 32-Core Processor , 8 cores, 15G, Windows 10 , 64 bit Build 18362 (10.0.18362.1110)
      Time: Wed Nov 4 10:02:02 2020 Eur elapsed time: 0.099733 seconds (0d 0h 0m 0s)

      --------------- T H R E A D ---------------

      Current thread (0x000001e27d4b9640): JavaThread "Unknown thread" [_thread_in_vm, id=3444, stack(0x000000681e700000,0x000000681e800000)]

      Stack: [0x000000681e700000,0x000000681e800000]
      [error occurred during error reporting (printing stack bounds), id 0xc0000005, EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x00007fff22002a19]

      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0xb13cc1] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:236)
      V [jvm.dll+0xdc1727] VMError::report+0xfb7 (vmError.cpp:731)
      V [jvm.dll+0xdc30ae] VMError::report_and_die+0x7de (vmError.cpp:1535)
      V [jvm.dll+0xdc28ca] VMError::report_and_die+0x5a (vmError.cpp:1317)
      V [jvm.dll+0xdc370f] VMError::report_and_die+0x3f (vmError.cpp:1322)
      V [jvm.dll+0xb12d84] topLevelExceptionFilter+0x684 (os_windows.cpp:2622)
      V [jvm.dll+0xe3f7d7] jni_DestroyJavaVM$filt$0+0x17 (jni.cpp:3849)
      C [VCRUNTIME140.dll+0xc1c0]
      C [ntdll.dll+0xa121f]
      C [ntdll.dll+0x6a259]
      C [ntdll.dll+0x9fe8e]
      V [jvm.dll+0xb02a19] os::is_first_C_frame+0x29 (os.cpp:1193)

            Assignee:
            Roman Kennke
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: