8255886: Shenandoah: Avoid register clash when calling LRB-runtime from interpreter